--- a/index.html
+++ b/index.html
@@ -104,34 +104,56 @@ body{
   </div>
 </section>
 
-<!-- PHOTO BLOCK 1 -->
+<!-- PHOTO BLOCK -->
 <section class="container-fix pb-14">
   <div class="glass overflow-hidden">
     <img src="images/hero.jpg" class="w-full h-[240px] object-cover opacity-80">
   </div>
 </section>
 
-<!-- ABOUT -->
-<section class="container-fix pb-14">
-  <div class="glass p-6">
+<!-- ABOUT + ADVANTAGES (без стекла) -->
+<section class="container-fix pb-16">
+
+  <div>
     <div class="text-xs text-white/60 font-semibold tracking-wide">О НАС</div>
     <h2 class="mt-2 text-2xl font-black">LUXAR AUTORENT</h2>
-    <p class="mt-4 text-white/70 leading-relaxed">
+    <p class="mt-4 text-white/70 leading-relaxed max-w-2xl">
       В автопарке 13 премиальных автомобилей — под любой формат:
       от деловых встреч до комфортного отдыха.
       Мы делаем сервис, к которому хочется возвращаться.
       <span class="text-white font-semibold">Ваш комфорт – наш стандарт.</span>
     </p>
   </div>
-</section>
 
-<!-- PHOTO BLOCK 2 -->
-<section class="container-fix pb-14">
-  <div class="glass overflow-hidden">
-    <img src="images/after.jpg"
-         onerror="this.src='images/hero.jpg';"
-         class="w-full h-[240px] object-cover opacity-80">
+  <!-- 4 преимущества -->
+  <div class="mt-12 grid grid-cols-2 lg:grid-cols-4 gap-8">
+
+    <div>
+      <div class="text-2xl font-black text-white/90">01</div>
+      <div class="mt-2 font-semibold">13 авто</div>
+      <div class="text-white/50 text-sm mt-1">Премиальный автопарк</div>
+    </div>
+
+    <div>
+      <div class="text-2xl font-black text-white/90">02</div>
+      <div class="mt-2 font-semibold">300+ клиентов</div>
+      <div class="text-white/50 text-sm mt-1">Высокий уровень доверия</div>
+    </div>
+
+    <div>
+      <div class="text-2xl font-black text-white/90">03</div>
+      <div class="mt-2 font-semibold">КАСКО + ОСАГО</div>
+      <div class="text-white/50 text-sm mt-1">Полная защита</div>
+    </div>
+
+    <div>
+      <div class="text-2xl font-black text-white/90">04</div>
+      <div class="mt-2 font-semibold">Тонировка</div>
+      <div class="text-white/50 text-sm mt-1">С разрешением</div>
+    </div>
+
   </div>
+
 </section>
 
 <!-- FLEET -->
@@ -144,7 +166,6 @@ body{
 
     <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
 
-      <!-- BMW M5 -->
       <article class="car-card">
         <div class="car-thumb"></div>
         <div class="p-5">
@@ -152,14 +173,11 @@ body{
             <div class="font-extrabold">BMW M5</div>
             <div class="font-semibold text-white/80">350$</div>
           </div>
-          <div class="mt-3 text-sm text-white/55">
-            Максимальная динамика и статус.
-          </div>
+          <div class="mt-3 text-sm text-white/55">Максимальная динамика и статус.</div>
           <a href="#lead1" class="mt-4 inline-block btn-ghost text-xs">Забронировать</a>
         </div>
       </article>
 
-      <!-- Land Cruiser -->
       <article class="car-card">
         <div class="car-thumb"></div>
         <div class="p-5">
@@ -167,14 +185,11 @@ body{
             <div class="font-extrabold">Land Cruiser 200</div>
             <div class="font-semibold text-white/80">300$</div>
           </div>
-          <div class="mt-3 text-sm text-white/55">
-            Премиальный SUV для любых дорог.
-          </div>
+          <div class="mt-3 text-sm text-white/55">Премиальный SUV.</div>
           <a href="#lead1" class="mt-4 inline-block btn-ghost text-xs">Забронировать</a>
         </div>
       </article>
 
-      <!-- BMW X7 -->
       <article class="car-card">
         <div class="car-thumb"></div>
         <div class="p-5">
@@ -182,14 +197,11 @@ body{
             <div class="font-extrabold">BMW X7</div>
             <div class="font-semibold text-white/80">250$</div>
           </div>
-          <div class="mt-3 text-sm text-white/55">
-            Простор и премиальный комфорт.
-          </div>
+          <div class="mt-3 text-sm text-white/55">Комфорт и пространство.</div>
           <a href="#lead1" class="mt-4 inline-block btn-ghost text-xs">Забронировать</a>
         </div>
       </article>
 
-      <!-- BMW X5 -->
       <article class="car-card">
         <div class="car-thumb"></div>
         <div class="p-5">
@@ -197,9 +209,7 @@ body{
             <div class="font-extrabold">BMW X5 G05</div>
             <div class="font-semibold text-white/80">220$</div>
           </div>
-          <div class="mt-3 text-sm text-white/55">
-            Универсальный премиум SUV.
-          </div>
+          <div class="mt-3 text-sm text-white/55">Универсальный премиум SUV.</div>
           <a href="#lead1" class="mt-4 inline-block btn-ghost text-xs">Забронировать</a>
         </div>
       </article>
