--- a/index.html
+++ b/index.html
@@ -9,44 +9,54 @@
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 <style>
-body{
-  font-family: Manrope, sans-serif;
-  background: linear-gradient(180deg,#070707,#0b0b0b);
-}
-.container-fix{
-  max-width:1100px;
-  margin:0 auto;
-  padding:0 20px;
-}
-.glass{
-  background: rgba(255,255,255,.05);
-  backdrop-filter: blur(14px);
-  border:1px solid rgba(255,255,255,.1);
-  border-radius:24px;
-}
-.btn{
-  background:#fff;
-  color:#000;
-  font-weight:900;
-  border-radius:999px;
-  padding:14px;
-}
-.btn-ghost{
-  background:rgba(255,255,255,.08);
-  border:1px solid rgba(255,255,255,.1);
-  border-radius:999px;
-  padding:8px 14px;
-}
-.car-card{
-  border-radius:22px;
-  border:1px solid rgba(255,255,255,.10);
-  background: rgba(255,255,255,.03);
-  overflow:hidden;
-}
-.car-thumb{
-  height:140px;
-  background: linear-gradient(135deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
-}
+  body{
+    font-family: Manrope, sans-serif;
+    background: linear-gradient(180deg,#070707,#0b0b0b);
+  }
+  .container-fix{
+    max-width:1100px;
+    margin:0 auto;
+    padding:0 20px;
+  }
+  .glass{
+    background: rgba(255,255,255,.05);
+    backdrop-filter: blur(14px);
+    border:1px solid rgba(255,255,255,.1);
+    border-radius:24px;
+  }
+  .btn{
+    background:#fff;
+    color:#000;
+    font-weight:900;
+    border-radius:999px;
+    padding:14px;
+  }
+  .btn:active{ transform: translateY(1px); }
+  .btn-ghost{
+    background:rgba(255,255,255,.08);
+    border:1px solid rgba(255,255,255,.1);
+    border-radius:999px;
+    padding:8px 14px;
+  }
+  .car-card{
+    border-radius:22px;
+    border:1px solid rgba(255,255,255,.10);
+    background: rgba(255,255,255,.03);
+    overflow:hidden;
+  }
+  .car-thumb{
+    height:140px;
+    background: linear-gradient(135deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
+  }
+
+  /* Reviews carousel (mobile) */
+  .snap-x{
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+  }
+  .snap-item{
+    scroll-snap-align: start;
+  }
 </style>
 </head>
 
@@ -63,7 +73,6 @@ body{
 <!-- HERO -->
 <section class="container-fix pt-14 pb-14">
   <div class="grid lg:grid-cols-2 gap-12 items-start">
-
     <div>
       <h1 class="text-4xl font-black leading-tight tracking-tight">
         Аренда авто премиум-класса
@@ -81,9 +90,7 @@ body{
       <div class="flex justify-between items-start">
         <div>
           <div class="text-xl font-black">Получить быстрый обратный звонок</div>
-          <div class="text-sm text-white/60 mt-1">
-            Перезвоним и уточним детали аренды
-          </div>
+          <div class="text-sm text-white/60 mt-1">Перезвоним и уточним детали аренды</div>
         </div>
         <div class="text-xs text-white/60 text-right">
           Ответим<br><span class="font-semibold text-white">10–20 мин</span>
@@ -93,27 +100,23 @@ body{
       <form class="mt-6 space-y-4">
         <input type="text" placeholder="Ваше имя"
           class="w-full bg-white/10 border border-white/10 rounded-2xl px-4 py-3 outline-none focus:border-white/30" />
-
         <input type="tel" placeholder="+996 ___ ___ ___"
           class="w-full bg-white/10 border border-white/10 rounded-2xl px-4 py-3 outline-none focus:border-white/30" />
-
         <button class="btn w-full">Заказать звонок</button>
       </form>
     </div>
-
   </div>
 </section>
 
-<!-- PHOTO BLOCK -->
+<!-- PHOTO BLOCK 1 -->
 <section class="container-fix pb-14">
   <div class="glass overflow-hidden">
-    <img src="images/hero.jpg" class="w-full h-[240px] object-cover opacity-80">
+    <img src="images/hero.jpg" class="w-full h-[240px] object-cover opacity-80" alt="">
   </div>
 </section>
 
 <!-- ABOUT + ADVANTAGES (без стекла) -->
 <section class="container-fix pb-16">
-
   <div>
     <div class="text-xs text-white/60 font-semibold tracking-wide">О НАС</div>
     <h2 class="mt-2 text-2xl font-black">LUXAR AUTORENT</h2>
@@ -125,47 +128,36 @@ body{
     </p>
   </div>
 
-  <!-- 4 преимущества -->
   <div class="mt-12 grid grid-cols-2 lg:grid-cols-4 gap-8">
-
     <div>
       <div class="text-2xl font-black text-white/90">01</div>
       <div class="mt-2 font-semibold">13 авто</div>
       <div class="text-white/50 text-sm mt-1">Премиальный автопарк</div>
     </div>
-
     <div>
       <div class="text-2xl font-black text-white/90">02</div>
       <div class="mt-2 font-semibold">300+ клиентов</div>
       <div class="text-white/50 text-sm mt-1">Высокий уровень доверия</div>
     </div>
-
     <div>
       <div class="text-2xl font-black text-white/90">03</div>
       <div class="mt-2 font-semibold">КАСКО + ОСАГО</div>
       <div class="text-white/50 text-sm mt-1">Полная защита</div>
     </div>
-
     <div>
       <div class="text-2xl font-black text-white/90">04</div>
       <div class="mt-2 font-semibold">Тонировка</div>
       <div class="text-white/50 text-sm mt-1">С разрешением</div>
     </div>
-
   </div>
-
 </section>
 
 <!-- FLEET -->
 <section id="fleet" class="container-fix pb-20">
   <div class="glass p-6">
-
-    <div class="text-xs text-white/60 font-semibold tracking-wide">
-      АВТОПАРК
-    </div>
+    <div class="text-xs text-white/60 font-semibold tracking-wide">АВТОПАРК</div>
 
     <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
-
       <article class="car-card">
         <div class="car-thumb"></div>
         <div class="p-5">
@@ -185,7 +177,7 @@ body{
             <div class="font-extrabold">Land Cruiser 200</div>
             <div class="font-semibold text-white/80">300$</div>
           </div>
-          <div class="mt-3 text-sm text-white/55">Премиальный SUV.</div>
+          <div class="mt-3 text-sm text-white/55">Премиальный SUV для любых дорог.</div>
           <a href="#lead1" class="mt-4 inline-block btn-ghost text-xs">Забронировать</a>
         </div>
       </article>
@@ -197,7 +189,7 @@ body{
             <div class="font-extrabold">BMW X7</div>
             <div class="font-semibold text-white/80">250$</div>
           </div>
-          <div class="mt-3 text-sm text-white/55">Комфорт и пространство.</div>
+          <div class="mt-3 text-sm text-white/55">Комфорт и пространство для поездок.</div>
           <a href="#lead1" class="mt-4 inline-block btn-ghost text-xs">Забронировать</a>
         </div>
       </article>
@@ -213,20 +205,125 @@ body{
           <a href="#lead1" class="mt-4 inline-block btn-ghost text-xs">Забронировать</a>
         </div>
       </article>
-
     </div>
 
     <div class="mt-10 text-center">
-      <a href="#lead1" class="btn px-10 inline-block">
-        Увидеть весь автопарк
-      </a>
+      <a href="#lead1" class="btn px-10 inline-block">Увидеть весь автопарк</a>
     </div>
-
   </div>
 </section>
 
-<footer class="border-t border-white/10 py-8 text-center text-white/50 text-sm">
-  © 2026 LUXAR AUTORENT • Бишкек
+<!-- REVIEWS -->
+<section class="container-fix pb-16">
+  <div class="flex items-end justify-between gap-4">
+    <div>
+      <div class="text-xs text-white/60 font-semibold tracking-wide">ОТЗЫВЫ</div>
+      <div class="mt-2 text-2xl font-black">Клиенты о сервисе</div>
+    </div>
+    <div class="hidden sm:block text-sm text-white/50">Листайте →</div>
+  </div>
+
+  <!-- Mobile: horizontal carousel | Desktop: grid -->
+  <div class="mt-6">
+    <div class="flex gap-4 overflow-x-auto snap-x pb-2 sm:grid sm:grid-cols-2 lg:grid-cols-4 sm:gap-4 sm:overflow-visible">
+      <!-- Review 1 -->
+      <article class="snap-item min-w-[82%] sm:min-w-0 glass p-5">
+        <div class="text-sm font-extrabold">Нурлан</div>
+        <div class="mt-2 text-sm text-white/70 leading-relaxed">
+          “Всё быстро: машина чистая, договор понятный. Сервис на уровне.”
+        </div>
+        <div class="mt-4 text-[12px] text-white/70">★★★★★</div>
+      </article>
+
+      <!-- Review 2 -->
+      <article class="snap-item min-w-[82%] sm:min-w-0 glass p-5">
+        <div class="text-sm font-extrabold">Айбек</div>
+        <div class="mt-2 text-sm text-white/70 leading-relaxed">
+          “Подобрали авто под встречу. Привезли вовремя, без лишних разговоров.”
+        </div>
+        <div class="mt-4 text-[12px] text-white/70">★★★★★</div>
+      </article>
+
+      <!-- Review 3 -->
+      <article class="snap-item min-w-[82%] sm:min-w-0 glass p-5">
+        <div class="text-sm font-extrabold">Алексей</div>
+        <div class="mt-2 text-sm text-white/70 leading-relaxed">
+          “Очень аккуратный подход. Всё прозрачно и по делу. Рекомендую.”
+        </div>
+        <div class="mt-4 text-[12px] text-white/70">★★★★★</div>
+      </article>
+
+      <!-- Review 4 -->
+      <article class="snap-item min-w-[82%] sm:min-w-0 glass p-5">
+        <div class="text-sm font-extrabold">Дмитрий</div>
+        <div class="mt-2 text-sm text-white/70 leading-relaxed">
+          “Брал X5. Машина в идеале, сервис быстро реагирует. Спасибо!”
+        </div>
+        <div class="mt-4 text-[12px] text-white/70">★★★★★</div>
+      </article>
+    </div>
+  </div>
+</section>
+
+<!-- PHOTO BLOCK 2 (after reviews) -->
+<section class="container-fix pb-16">
+  <div class="glass overflow-hidden">
+    <img src="images/reviews.jpg"
+         onerror="this.src='images/hero.jpg';"
+         class="w-full h-[240px] object-cover opacity-80" alt="">
+  </div>
+</section>
+
+<!-- FAQ -->
+<section class="container-fix pb-20">
+  <div class="text-xs text-white/60 font-semibold tracking-wide">FAQ</div>
+  <div class="mt-2 text-2xl font-black">Частые вопросы</div>
+
+  <div class="mt-6 space-y-3">
+    <details class="glass p-5">
+      <summary class="cursor-pointer font-semibold text-white/90">Какие документы нужны?</summary>
+      <div class="mt-3 text-sm text-white/65 leading-relaxed">
+        Обычно достаточно паспорта и водительского удостоверения. Условия уточним по телефону.
+      </div>
+    </details>
+
+    <details class="glass p-5">
+      <summary class="cursor-pointer font-semibold text-white/90">Есть ли депозит?</summary>
+      <div class="mt-3 text-sm text-white/65 leading-relaxed">
+        Да, депозит зависит от выбранного автомобиля. Сумму озвучим до подтверждения брони.
+      </div>
+    </details>
+
+    <details class="glass p-5">
+      <summary class="cursor-pointer font-semibold text-white/90">Можно ли подачу/доставку по городу?</summary>
+      <div class="mt-3 text-sm text-white/65 leading-relaxed">
+        Да, возможна подача по Бишкеку по договорённости — уточним адрес и время.
+      </div>
+    </details>
+
+    <details class="glass p-5">
+      <summary class="cursor-pointer font-semibold text-white/90">Страховка включена?</summary>
+      <div class="mt-3 text-sm text-white/65 leading-relaxed">
+        Машины застрахованы (КАСКО и ОСАГО). Детали покрытия уточним под выбранную модель.
+      </div>
+    </details>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="border-t border-white/10">
+  <div class="container-fix py-10 text-sm text-white/55">
+    <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3">
+      <div>© 2026 LUXAR AUTORENT • Бишкек</div>
+      <div class="flex gap-3">
+        <a href="#lead1" class="underline underline-offset-4">Оставить заявку</a>
+        <a href="#fleet" class="underline underline-offset-4">Автопарк</a>
+      </div>
+    </div>
+    <div class="mt-4 text-xs text-white/40">
+      Информация на сайте носит справочный характер. Условия аренды уточняются при подтверждении заявки.
+    </div>
+  </div>
 </footer>
 
 </body>
