--- a/index.html
+++ b/index.html
@@ -48,14 +48,40 @@
     height:140px;
     background: linear-gradient(135deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
   }
-
-  /* Reviews carousel (mobile) */
   .snap-x{
     scroll-snap-type: x mandatory;
     -webkit-overflow-scrolling: touch;
   }
-  .snap-item{
-    scroll-snap-align: start;
+  .snap-item{ scroll-snap-align: start; }
+
+  /* Modal */
+  .modal-backdrop{
+    position: fixed; inset: 0;
+    background: rgba(0,0,0,.55);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    display:none;
+    align-items:center;
+    justify-content:center;
+    z-index: 999;
+    padding: 18px;
+  }
+  .modal-backdrop.open{ display:flex; }
+  .modal-card{
+    width: min(520px, 100%);
+    border-radius: 24px;
+    border:1px solid rgba(255,255,255,.12);
+    background: rgba(18,18,18,.92);
+    box-shadow: 0 30px 90px rgba(0,0,0,.55);
+  }
+  .modal-x{
+    width: 34px; height: 34px;
+    border-radius: 999px;
+    border:1px solid rgba(255,255,255,.12);
+    background: rgba(255,255,255,.06);
+    display:flex; align-items:center; justify-content:center;
+    font-weight: 900;
+    color: rgba(255,255,255,.85);
   }
 </style>
 </head>
@@ -97,12 +123,13 @@
         </div>
       </div>
 
-      <form class="mt-6 space-y-4">
-        <input type="text" placeholder="Ваше имя"
+      <form id="leadForm1" class="mt-6 space-y-4" autocomplete="off">
+        <input name="name" type="text" placeholder="Ваше имя" required
           class="w-full bg-white/10 border border-white/10 rounded-2xl px-4 py-3 outline-none focus:border-white/30" />
-        <input type="tel" placeholder="+996 ___ ___ ___"
+        <input id="phone1" name="phone" type="tel" placeholder="+996 ___ ___ ___" required inputmode="tel"
           class="w-full bg-white/10 border border-white/10 rounded-2xl px-4 py-3 outline-none focus:border-white/30" />
-        <button class="btn w-full">Заказать звонок</button>
+        <button class="btn w-full" type="submit">Заказать звонок</button>
+        <div id="status1" class="text-xs text-white/60"></div>
       </form>
     </div>
   </div>
@@ -152,12 +179,51 @@
   </div>
 </section>
 
+<!-- LEAD 2 (вернули) -->
+<section class="container-fix pb-16">
+  <div id="lead2" class="glass p-6">
+    <div class="flex justify-between items-start">
+      <div>
+        <div class="text-xs text-white/60 font-semibold tracking-wide">ЗАЯВКА</div>
+        <div class="mt-2 text-2xl font-black">Подобрать автомобиль</div>
+        <div class="mt-2 text-sm text-white/60">
+          Выберите машину — мы перезвоним и подтвердим наличие.
+        </div>
+      </div>
+      <div class="text-xs text-white/60 text-right">
+        Ответим<br><span class="font-semibold text-white">10–20 мин</span>
+      </div>
+    </div>
+
+    <form id="leadForm2" class="mt-6 space-y-4" autocomplete="off">
+      <select name="car" required
+        class="w-full bg-white/10 border border-white/10 rounded-2xl px-4 py-3 outline-none focus:border-white/30">
+        <option value="" selected disabled>Выберите автомобиль</option>
+        <option>BMW M5 — 350$</option>
+        <option>Land Cruiser 200 — 300$</option>
+        <option>BMW X7 — 250$</option>
+        <option>BMW X5 G05 — 220$</option>
+      </select>
+
+      <input name="name" type="text" placeholder="Ваше имя" required
+        class="w-full bg-white/10 border border-white/10 rounded-2xl px-4 py-3 outline-none focus:border-white/30" />
+
+      <input id="phone2" name="phone" type="tel" placeholder="+996 ___ ___ ___" required inputmode="tel"
+        class="w-full bg-white/10 border border-white/10 rounded-2xl px-4 py-3 outline-none focus:border-white/30" />
+
+      <button class="btn w-full" type="submit">Отправить заявку</button>
+      <div id="status2" class="text-xs text-white/60"></div>
+    </form>
+  </div>
+</section>
+
 <!-- FLEET -->
 <section id="fleet" class="container-fix pb-20">
   <div class="glass p-6">
     <div class="text-xs text-white/60 font-semibold tracking-wide">АВТОПАРК</div>
 
     <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
+
       <article class="car-card">
         <div class="car-thumb"></div>
         <div class="p-5">
@@ -166,7 +232,9 @@
             <div class="font-semibold text-white/80">350$</div>
           </div>
           <div class="mt-3 text-sm text-white/55">Максимальная динамика и статус.</div>
-          <a href="#lead1" class="mt-4 inline-block btn-ghost text-xs">Забронировать</a>
+          <button class="mt-4 inline-block btn-ghost text-xs js-open-modal" data-car="BMW M5 (350$)" type="button">
+            Забронировать
+          </button>
         </div>
       </article>
 
@@ -178,7 +246,9 @@
             <div class="font-semibold text-white/80">300$</div>
           </div>
           <div class="mt-3 text-sm text-white/55">Премиальный SUV для любых дорог.</div>
-          <a href="#lead1" class="mt-4 inline-block btn-ghost text-xs">Забронировать</a>
+          <button class="mt-4 inline-block btn-ghost text-xs js-open-modal" data-car="Land Cruiser 200 (300$)" type="button">
+            Забронировать
+          </button>
         </div>
       </article>
 
@@ -190,7 +260,9 @@
             <div class="font-semibold text-white/80">250$</div>
           </div>
           <div class="mt-3 text-sm text-white/55">Комфорт и пространство для поездок.</div>
-          <a href="#lead1" class="mt-4 inline-block btn-ghost text-xs">Забронировать</a>
+          <button class="mt-4 inline-block btn-ghost text-xs js-open-modal" data-car="BMW X7 (250$)" type="button">
+            Забронировать
+          </button>
         </div>
       </article>
 
@@ -202,13 +274,18 @@
             <div class="font-semibold text-white/80">220$</div>
           </div>
           <div class="mt-3 text-sm text-white/55">Универсальный премиум SUV.</div>
-          <a href="#lead1" class="mt-4 inline-block btn-ghost text-xs">Забронировать</a>
+          <button class="mt-4 inline-block btn-ghost text-xs js-open-modal" data-car="BMW X5 G05 (220$)" type="button">
+            Забронировать
+          </button>
         </div>
       </article>
+
     </div>
 
     <div class="mt-10 text-center">
-      <a href="#lead1" class="btn px-10 inline-block">Увидеть весь автопарк</a>
+      <button class="btn px-10 inline-block js-open-modal" data-car="Полный автопарк" type="button">
+        Увидеть весь автопарк
+      </button>
     </div>
   </div>
 </section>
@@ -223,10 +300,8 @@
     <div class="hidden sm:block text-sm text-white/50">Листайте →</div>
   </div>
 
-  <!-- Mobile: horizontal carousel | Desktop: grid -->
   <div class="mt-6">
     <div class="flex gap-4 overflow-x-auto snap-x pb-2 sm:grid sm:grid-cols-2 lg:grid-cols-4 sm:gap-4 sm:overflow-visible">
-      <!-- Review 1 -->
       <article class="snap-item min-w-[82%] sm:min-w-0 glass p-5">
         <div class="text-sm font-extrabold">Нурлан</div>
         <div class="mt-2 text-sm text-white/70 leading-relaxed">
@@ -235,29 +310,26 @@
         <div class="mt-4 text-[12px] text-white/70">★★★★★</div>
       </article>
 
-      <!-- Review 2 -->
       <article class="snap-item min-w-[82%] sm:min-w-0 glass p-5">
         <div class="text-sm font-extrabold">Айбек</div>
         <div class="mt-2 text-sm text-white/70 leading-relaxed">
-          “Подобрали авто под встречу. Привезли вовремя, без лишних разговоров.”
+          “Подобрали авто под встречу. Привезли вовремя, всё по делу.”
         </div>
         <div class="mt-4 text-[12px] text-white/70">★★★★★</div>
       </article>
 
-      <!-- Review 3 -->
       <article class="snap-item min-w-[82%] sm:min-w-0 glass p-5">
         <div class="text-sm font-extrabold">Алексей</div>
         <div class="mt-2 text-sm text-white/70 leading-relaxed">
-          “Очень аккуратный подход. Всё прозрачно и по делу. Рекомендую.”
+          “Аккуратный подход. Всё прозрачно, без сюрпризов. Рекомендую.”
         </div>
         <div class="mt-4 text-[12px] text-white/70">★★★★★</div>
       </article>
 
-      <!-- Review 4 -->
       <article class="snap-item min-w-[82%] sm:min-w-0 glass p-5">
         <div class="text-sm font-extrabold">Дмитрий</div>
         <div class="mt-2 text-sm text-white/70 leading-relaxed">
-          “Брал X5. Машина в идеале, сервис быстро реагирует. Спасибо!”
+          “Брал X5. Машина в идеале, реагируют быстро. Спасибо!”
         </div>
         <div class="mt-4 text-[12px] text-white/70">★★★★★</div>
       </article>
@@ -265,7 +337,7 @@
   </div>
 </section>
 
-<!-- PHOTO BLOCK 2 (after reviews) -->
+<!-- PHOTO BLOCK (after reviews) -->
 <section class="container-fix pb-16">
   <div class="glass overflow-hidden">
     <img src="images/reviews.jpg"
@@ -316,7 +388,7 @@
     <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3">
       <div>© 2026 LUXAR AUTORENT • Бишкек</div>
       <div class="flex gap-3">
-        <a href="#lead1" class="underline underline-offset-4">Оставить заявку</a>
+        <a href="#lead1" class="underline underline-offset-4">Заявка</a>
         <a href="#fleet" class="underline underline-offset-4">Автопарк</a>
       </div>
     </div>
@@ -325,6 +397,140 @@
     </div>
   </div>
 </footer>
+
+<!-- MODAL (short form) -->
+<div id="modalBackdrop" class="modal-backdrop" aria-hidden="true">
+  <div class="modal-card p-6">
+    <div class="flex items-start justify-between gap-4">
+      <div>
+        <div class="text-xs text-white/60 font-semibold tracking-wide">ЗАЯВКА</div>
+        <div class="mt-2 text-2xl font-black">Получить звонок</div>
+        <div id="modalCarText" class="mt-2 text-sm text-white/60"></div>
+      </div>
+      <button id="modalClose" class="modal-x" type="button" aria-label="Закрыть">✕</button>
+    </div>
+
+    <form id="modalForm" class="mt-6 space-y-4" autocomplete="off">
+      <input id="modalCar" name="car" type="hidden" value="">
+      <input name="name" type="text" placeholder="Ваше имя" required
+        class="w-full bg-white/10 border border-white/10 rounded-2xl px-4 py-3 outline-none focus:border-white/30" />
+      <input id="modalPhone" name="phone" type="tel" placeholder="+996 ___ ___ ___" required inputmode="tel"
+        class="w-full bg-white/10 border border-white/10 rounded-2xl px-4 py-3 outline-none focus:border-white/30" />
+      <button class="btn w-full" type="submit">Получить звонок</button>
+      <div id="modalStatus" class="text-xs text-white/60"></div>
+    </form>
+  </div>
+</div>
+
+<script>
+  // ====== куда потом подключим отправку (Google Sheets / Apps Script) ======
+  const SUBMIT_ENDPOINT = ""; // пример: "https://script.google.com/macros/s/XXXXX/exec"
+
+  function attachPhoneMask(input){
+    input.addEventListener('input', () => {
+      let v = input.value.replace(/[^\d+]/g, '');
+      if (!v.startsWith('+')) v = '+996' + v.replace(/^996/, '');
+      v = '+' + v.replace(/\+/g,'');
+      input.value = v;
+    });
+  }
+  function isPhoneValid(value){
+    const digits = value.replace(/\D/g,'');
+    return digits.length >= 12;
+  }
+
+  attachPhoneMask(document.getElementById('phone1'));
+  attachPhoneMask(document.getElementById('phone2'));
+  attachPhoneMask(document.getElementById('modalPhone'));
+
+  async function sendLead(payload){
+    payload.page_url = location.href;
+    payload.created_at = new Date().toISOString();
+
+    if (!SUBMIT_ENDPOINT) return true;
+    const res = await fetch(SUBMIT_ENDPOINT, {
+      method: "POST",
+      headers: {"Content-Type":"application/json"},
+      body: JSON.stringify(payload)
+    });
+    return res.ok;
+  }
+
+  // Form 1
+  document.getElementById('leadForm1').addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const status = document.getElementById('status1');
+    const phone = document.getElementById('phone1').value;
+    if (!isPhoneValid(phone)) { status.textContent = "Проверьте номер телефона"; return; }
+    status.textContent = "Отправляем…";
+    const fd = new FormData(e.target);
+    const payload = Object.fromEntries(fd.entries());
+    payload.source = "lead_form_1";
+    const ok = await sendLead(payload);
+    status.textContent = ok ? "Заявка отправлена ✓" : "Ошибка отправки. Попробуйте ещё раз.";
+    if (ok) e.target.reset();
+  });
+
+  // Form 2
+  document.getElementById('leadForm2').addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const status = document.getElementById('status2');
+    const phone = document.getElementById('phone2').value;
+    if (!isPhoneValid(phone)) { status.textContent = "Проверьте номер телефона"; return; }
+    status.textContent = "Отправляем…";
+    const fd = new FormData(e.target);
+    const payload = Object.fromEntries(fd.entries());
+    payload.source = "lead_form_2";
+    const ok = await sendLead(payload);
+    status.textContent = ok ? "Заявка отправлена ✓" : "Ошибка отправки. Попробуйте ещё раз.";
+    if (ok) e.target.reset();
+  });
+
+  // Modal open/close
+  const modalBackdrop = document.getElementById('modalBackdrop');
+  const modalClose = document.getElementById('modalClose');
+  const modalCar = document.getElementById('modalCar');
+  const modalCarText = document.getElementById('modalCarText');
+  const modalStatus = document.getElementById('modalStatus');
+
+  function openModal(carLabel){
+    modalStatus.textContent = "";
+    modalCar.value = carLabel || "";
+    modalCarText.textContent = carLabel ? ("Вы выбрали: " + carLabel) : "Оставьте контакты — мы перезвоним.";
+    modalBackdrop.classList.add('open');
+    modalBackdrop.setAttribute('aria-hidden','false');
+    setTimeout(() => document.getElementById('modalPhone').focus(), 50);
+  }
+  function closeModal(){
+    modalBackdrop.classList.remove('open');
+    modalBackdrop.setAttribute('aria-hidden','true');
+  }
+  modalClose.addEventListener('click', closeModal);
+  modalBackdrop.addEventListener('click', (e) => { if (e.target === modalBackdrop) closeModal(); });
+  document.addEventListener('keydown', (e) => { if (e.key === 'Escape') closeModal(); });
+
+  // Bind buttons
+  document.querySelectorAll('.js-open-modal').forEach(btn => {
+    btn.addEventListener('click', () => openModal(btn.dataset.car || "Автопарк"));
+  });
+
+  // Modal submit
+  document.getElementById('modalForm').addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const phone = document.getElementById('modalPhone').value;
+    if (!isPhoneValid(phone)) { modalStatus.textContent = "Проверьте номер телефона"; return; }
+    modalStatus.textContent = "Отправляем…";
+    const fd = new FormData(e.target);
+    const payload = Object.fromEntries(fd.entries());
+    payload.source = "modal_short_form";
+    const ok = await sendLead(payload);
+    modalStatus.textContent = ok ? "Заявка отправлена ✓" : "Ошибка отправки. Попробуйте ещё раз.";
+    if (ok) {
+      e.target.reset();
+      setTimeout(closeModal, 400);
+    }
+  });
+</script>
 
 </body>
 </html>
