--- a/index.html
+++ b/index.html
@@ -44,10 +44,16 @@
     background: rgba(255,255,255,.03);
     overflow:hidden;
   }
+
+  /* ✅ ВАЖНО: вместо div-заглушки используем img */
   .car-thumb{
     height:140px;
+    width:100%;
+    object-fit:cover;
+    display:block;
     background: linear-gradient(135deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
   }
+
   .snap-x{
     scroll-snap-type: x mandatory;
     -webkit-overflow-scrolling: touch;
@@ -138,7 +144,14 @@
 <!-- PHOTO BLOCK 1 -->
 <section class="container-fix pb-14">
   <div class="glass overflow-hidden">
-    <img src="images/hero.jpg" class="w-full h-[240px] object-cover opacity-80" alt="">
+    <!-- ⚠️ Сейчас стоит collection-ссылка (может НЕ отображаться как картинка).
+         ✅ ЗАМЕНИ на Delivery URL вида https://res.cloudinary.com/dc2n4hmij/image/upload/... -->
+    <img
+      src="https://collection.cloudinary.com/dc2n4hmij/df62bdf3c51cb7544b5b135f6c9d5401"
+      class="w-full h-[240px] object-cover opacity-80"
+      alt=""
+      onerror="this.style.display='none'; this.parentElement.insertAdjacentHTML('beforeend','<div class=&quot;w-full h-[240px]&quot; style=&quot;background:linear-gradient(135deg, rgba(255,255,255,.06), rgba(255,255,255,.02))&quot;></div>');"
+    >
   </div>
 </section>
 
@@ -235,7 +248,13 @@
     <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
 
       <article class="car-card">
-        <div class="car-thumb"></div>
+        <!-- ⚠️ collection-link может не работать как img.
+             ✅ Заменить на Delivery URL (res.cloudinary.com...) -->
+        <img class="car-thumb"
+             src="https://collection.cloudinary.com/dc2n4hmij/25eafaf2be8099824f8c1a3d6862212a"
+             alt="BMW M5"
+             onerror="this.style.display='none';"
+        >
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW M5</div>
@@ -249,7 +268,11 @@
       </article>
 
       <article class="car-card">
-        <div class="car-thumb"></div>
+        <img class="car-thumb"
+             src="https://collection.cloudinary.com/dc2n4hmij/d168b956d1a266a473c0f391b69d7765"
+             alt="Land Cruiser 200"
+             onerror="this.style.display='none';"
+        >
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">Land Cruiser 200</div>
@@ -263,7 +286,11 @@
       </article>
 
       <article class="car-card">
-        <div class="car-thumb"></div>
+        <img class="car-thumb"
+             src="https://collection.cloudinary.com/dc2n4hmij/82bfa083b37a3dca875f539943c5d2cf"
+             alt="BMW X7"
+             onerror="this.style.display='none';"
+        >
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW X7</div>
@@ -277,7 +304,11 @@
       </article>
 
       <article class="car-card">
-        <div class="car-thumb"></div>
+        <img class="car-thumb"
+             src="https://collection.cloudinary.com/dc2n4hmij/012836217a0b79ae39b1d2c564a43911"
+             alt="BMW X5 G05"
+             onerror="this.style.display='none';"
+        >
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW X5 G05</div>
@@ -350,9 +381,14 @@
 <!-- PHOTO BLOCK (after reviews) -->
 <section class="container-fix pb-16">
   <div class="glass overflow-hidden">
-    <img src="images/reviews.jpg"
-         onerror="this.src='images/hero.jpg';"
-         class="w-full h-[240px] object-cover opacity-80" alt="">
+    <!-- ⚠️ Пока нет 6-й картинки. Как появится — вставишь Delivery URL сюда.
+         Сейчас оставил первую (для визуала). -->
+    <img
+      src="https://collection.cloudinary.com/dc2n4hmij/df62bdf3c51cb7544b5b135f6c9d5401"
+      class="w-full h-[240px] object-cover opacity-80"
+      alt=""
+      onerror="this.style.display='none'; this.parentElement.insertAdjacentHTML('beforeend','<div class=&quot;w-full h-[240px]&quot; style=&quot;background:linear-gradient(135deg, rgba(255,255,255,.06), rgba(255,255,255,.02))&quot;></div>');"
+    >
   </div>
 </section>
 
