--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <div class="glass overflow-hidden">
     <div
       class="photo-block opacity-80"
-      style="background-image:url('https://collection.cloudinary.com/dc2n4hmij/df62bdf3c51cb7544b5b135f6c9d5401');">
+      style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/v1772051898/freepik__-__10075_gcfi7k.png');">
     </div>
   </div>
 </section>
@@ -253,7 +253,7 @@
     <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
 
       <article class="car-card">
-        <div class="car-thumb" style="background-image:url('https://collection.cloudinary.com/dc2n4hmij/25eafaf2be8099824f8c1a3d6862212a');"></div>
+        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/v1772052021/IMG_8032_2_q9mcuc.jpg');"></div>
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW M5</div>
@@ -267,7 +267,7 @@
       </article>
 
       <article class="car-card">
-        <div class="car-thumb" style="background-image:url('https://collection.cloudinary.com/dc2n4hmij/d168b956d1a266a473c0f391b69d7765');"></div>
+        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/v1772052135/freepik__-__6913_r2s2am.png');"></div>
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">Land Cruiser 200</div>
@@ -281,7 +281,7 @@
       </article>
 
       <article class="car-card">
-        <div class="car-thumb" style="background-image:url('https://collection.cloudinary.com/dc2n4hmij/82bfa083b37a3dca875f539943c5d2cf');"></div>
+        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/v1772052286/photo_5425033390299221145_y_ligtxq.jpg');"></div>
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW X7</div>
@@ -295,7 +295,7 @@
       </article>
 
       <article class="car-card">
-        <div class="car-thumb" style="background-image:url('https://collection.cloudinary.com/dc2n4hmij/012836217a0b79ae39b1d2c564a43911');"></div>
+        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/v1772052219/freepik__-__6911_gow3so.png');"></div>
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW X5 G05</div>
@@ -368,10 +368,9 @@
 <!-- PHOTO BLOCK (after reviews) -->
 <section class="container-fix pb-16">
   <div class="glass overflow-hidden">
-    <!-- пока ставлю 4-ю ссылку как “второй фото-блок” -->
     <div
       class="photo-block opacity-80"
-      style="background-image:url('https://collection.cloudinary.com/dc2n4hmij/82bfa083b37a3dca875f539943c5d2cf');">
+      style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/v1772051898/freepik__-__10075_gcfi7k.png');">
     </div>
   </div>
 </section>
