--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-<!-- (минимально) preconnect для ускорения загрузки Cloudinary -->
 <link rel="preconnect" href="https://res.cloudinary.com" crossorigin>
 <link rel="dns-prefetch" href="https://res.cloudinary.com">
 
@@ -29,9 +28,9 @@
     border-radius:24px;
   }
 
-  /* ✅ Кнопки синие + легкий flash (shine) */
+  /* Кнопки синие + легкий flash */
   .btn{
-    background:#2563eb; /* blue-600 */
+    background:#2563eb;
     color:#fff;
     font-weight:900;
     border-radius:999px;
@@ -39,10 +38,9 @@
     position: relative;
     overflow: hidden;
     transform: translateZ(0);
+    animation: btnPulse 2.6s ease-in-out infinite;
   }
   .btn:active{ transform: translateY(1px); }
-
-  /* shine-полоска */
   .btn::after{
     content:"";
     position:absolute;
@@ -62,24 +60,17 @@
     40%  { left:140%; opacity:.0; }
     100% { left:140%; opacity:.0; }
   }
-
-  /* мягкий pulse (минимальный) */
-  .btn{
-    animation: btnPulse 2.6s ease-in-out infinite;
-  }
   @keyframes btnPulse{
     0%,100% { box-shadow: 0 0 0 rgba(37,99,235,0); }
     50%     { box-shadow: 0 0 0 10px rgba(37,99,235,0.10); }
   }
 
-  /* ghost без изменений */
   .btn-ghost{
     background:rgba(255,255,255,.08);
     border:1px solid rgba(255,255,255,.1);
     border-radius:999px;
     padding:8px 14px;
   }
-
   .car-card{
     border-radius:22px;
     border:1px solid rgba(255,255,255,.10);
@@ -87,17 +78,19 @@
     overflow:hidden;
   }
 
-  /* ✅ Возвращаем “зону фото” как стабильную заглушку (не исчезает никогда) */
+  /* ✅ Фото в карточках: выше и меньше режется */
   .car-thumb{
-    height:140px;
+    height:210px; /* было 140 */
     background:
       linear-gradient(135deg, rgba(255,255,255,.10), rgba(255,255,255,.02));
     background-size: cover;
-    background-position: center;
+    background-position: center 35%; /* чуть выше кадр */
     border-bottom: 1px solid rgba(255,255,255,.08);
   }
+  @media (min-width: 1024px){
+    .car-thumb{ height:170px; }
+  }
 
-  /* Фото-блоки */
   .photo-block{
     height:240px;
     background:
@@ -112,7 +105,6 @@
   }
   .snap-item{ scroll-snap-align: start; }
 
-  /* Modal */
   .modal-backdrop{
     position: fixed; inset: 0;
     background: rgba(0,0,0,.55);
@@ -142,7 +134,7 @@
     color: rgba(255,255,255,.85);
   }
 
-  /* ✅ Минималистичная анимация появления секций */
+  /* Минималистичное появление секций */
   .reveal{
     opacity: 0;
     transform: translateY(10px);
@@ -162,7 +154,6 @@
 
 <body class="text-white">
 
-<!-- HEADER -->
 <header class="sticky top-0 backdrop-blur bg-black/40 border-b border-white/10 z-50">
   <div class="container-fix py-3 flex justify-between items-center">
     <div class="font-black tracking-wide">LUXAR AUTORENT</div>
@@ -170,7 +161,6 @@
   </div>
 </header>
 
-<!-- HERO -->
 <section class="container-fix pt-14 pb-14 reveal">
   <div class="grid lg:grid-cols-2 gap-12 items-start">
     <div>
@@ -185,7 +175,6 @@
       </div>
     </div>
 
-    <!-- LEAD 1 -->
     <div id="lead1" class="glass p-6">
       <div class="flex justify-between items-start">
         <div>
@@ -209,7 +198,6 @@
   </div>
 </section>
 
-<!-- PHOTO BLOCK 1 (после 1-й лидформы) -->
 <section class="container-fix pb-14 reveal">
   <div class="glass overflow-hidden">
     <div
@@ -219,7 +207,6 @@
   </div>
 </section>
 
-<!-- ABOUT + ADVANTAGES (без стекла) -->
 <section class="container-fix pb-16 reveal">
   <div>
     <div class="text-xs text-white/60 font-semibold tracking-wide">О НАС</div>
@@ -256,7 +243,6 @@
   </div>
 </section>
 
-<!-- LEAD 2 (вернули) -->
 <section class="container-fix pb-16 reveal">
   <div id="lead2" class="glass p-6">
     <div class="flex justify-between items-start">
@@ -303,7 +289,6 @@
   </div>
 </section>
 
-<!-- FLEET -->
 <section id="fleet" class="container-fix pb-20 reveal">
   <div class="glass p-6">
     <div class="text-xs text-white/60 font-semibold tracking-wide">АВТОПАРК</div>
@@ -311,7 +296,7 @@
     <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
 
       <article class="car-card">
-        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/f_auto,q_auto,w_900/v1772052021/IMG_8032_2_q9mcuc.jpg');"></div>
+        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/f_auto,q_auto,w_1100/v1772052021/IMG_8032_2_q9mcuc.jpg');"></div>
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW M5</div>
@@ -325,7 +310,7 @@
       </article>
 
       <article class="car-card">
-        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/f_auto,q_auto,w_900/v1772052135/freepik__-__6913_r2s2am.png');"></div>
+        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/f_auto,q_auto,w_1100/v1772052135/freepik__-__6913_r2s2am.png');"></div>
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">Land Cruiser 200</div>
@@ -339,7 +324,7 @@
       </article>
 
       <article class="car-card">
-        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/f_auto,q_auto,w_900/v1772052286/photo_5425033390299221145_y_ligtxq.jpg');"></div>
+        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/f_auto,q_auto,w_1100/v1772052286/photo_5425033390299221145_y_ligtxq.jpg');"></div>
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW X7</div>
@@ -353,7 +338,7 @@
       </article>
 
       <article class="car-card">
-        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/f_auto,q_auto,w_900/v1772052219/freepik__-__6911_gow3so.png');"></div>
+        <div class="car-thumb" style="background-image:url('https://res.cloudinary.com/dc2n4hmij/image/upload/f_auto,q_auto,w_1100/v1772052219/freepik__-__6911_gow3so.png');"></div>
         <div class="p-5">
           <div class="flex justify-between">
             <div class="font-extrabold">BMW X5 G05</div>
@@ -376,7 +361,6 @@
   </div>
 </section>
 
-<!-- REVIEWS -->
 <section class="container-fix pb-16 reveal">
   <div class="flex items-end justify-between gap-4">
     <div>
@@ -423,7 +407,6 @@
   </div>
 </section>
 
-<!-- PHOTO BLOCK (after reviews) -->
 <section class="container-fix pb-16 reveal">
   <div class="glass overflow-hidden">
     <div
@@ -433,7 +416,6 @@
   </div>
 </section>
 
-<!-- FAQ -->
 <section class="container-fix pb-20 reveal">
   <div class="text-xs text-white/60 font-semibold tracking-wide">FAQ</div>
   <div class="mt-2 text-2xl font-black">Частые вопросы</div>
@@ -469,7 +451,6 @@
   </div>
 </section>
 
-<!-- FOOTER -->
 <footer class="border-t border-white/10 reveal">
   <div class="container-fix py-10 text-sm text-white/55">
     <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3">
@@ -485,7 +466,6 @@
   </div>
 </footer>
 
-<!-- MODAL (short form) -->
 <div id="modalBackdrop" class="modal-backdrop" aria-hidden="true">
   <div class="modal-card p-6">
     <div class="flex items-start justify-between gap-4">
@@ -542,7 +522,6 @@
     return res.ok;
   }
 
-  // Form 1
   document.getElementById('leadForm1').addEventListener('submit', async (e) => {
     e.preventDefault();
     const status = document.getElementById('status1');
@@ -557,7 +536,6 @@
     if (ok) e.target.reset();
   });
 
-  // Form 2
   document.getElementById('leadForm2').addEventListener('submit', async (e) => {
     e.preventDefault();
     const status = document.getElementById('status2');
@@ -572,7 +550,6 @@
     if (ok) e.target.reset();
   });
 
-  // Modal open/close
   const modalBackdrop = document.getElementById('modalBackdrop');
   const modalClose = document.getElementById('modalClose');
   const modalCar = document.getElementById('modalCar');
@@ -600,7 +577,6 @@
     btn.addEventListener('click', () => openModal(btn.dataset.car || "Автопарк"));
   });
 
-  // Modal submit
   document.getElementById('modalForm').addEventListener('submit', async (e) => {
     e.preventDefault();
     const phone = document.getElementById('modalPhone').value;
@@ -617,7 +593,6 @@
     }
   });
 
-  /* ✅ Минималистичное появление секций */
   (function(){
     const els = document.querySelectorAll('.reveal');
     if (!('IntersectionObserver' in window) || els.length === 0){
