--- a/index.html
+++ b/index.html
@@ -509,26 +509,21 @@
   attachPhoneMask(document.getElementById('phone2'));
   attachPhoneMask(document.getElementById('modalPhone'));
 
-  // ✅ FIX: отправляем как text/plain, чтобы не было CORS preflight и не зависало на "Отправляем…"
+  // ✅ FIX: no-cors + text/plain (чтобы не было "висит" или "ошибка" из-за CORS)
   async function sendLead(payload){
     payload.page_url = location.href;
     payload.created_at = new Date().toISOString();
     if (!SUBMIT_ENDPOINT) return true;
 
-    const controller = new AbortController();
-    const t = setTimeout(() => controller.abort(), 12000);
-
     try{
-      const res = await fetch(SUBMIT_ENDPOINT, {
+      await fetch(SUBMIT_ENDPOINT, {
         method: "POST",
+        mode: "no-cors",
         headers: { "Content-Type": "text/plain;charset=utf-8" },
-        body: JSON.stringify(payload),
-        signal: controller.signal
+        body: JSON.stringify(payload)
       });
-      clearTimeout(t);
-      return res.ok;
+      return true;
     }catch(err){
-      clearTimeout(t);
       return false;
     }
   }
